syntax = "proto3";
package proto;

option go_package = "github.com/airconduct/kruntime/runtimes/golett/api/proto";

import "actor.proto";


message LoadRequest {
    string name = 1;
    string path = 2;
}

message LoadResponse {
    PID pid = 1;
}

message UnloadRequest {
    PID pid = 1;
}

message UnloadResponse {}

message ListRequest {
    string filter = 1;
}

message ListResponse {
    repeated PID pids = 1;
}

service Golet {
    rpc Invoke(RemoteMessage) returns (RemoteMessage);
    rpc Load(LoadRequest) returns (LoadResponse);
    rpc Unload(UnloadRequest) returns (UnloadResponse);
    rpc List(ListRequest) returns (ListResponse);
}
